[project]
name = "linkedin-publisher"
version = "0.1.0"
description = "CLI tool for vetting and publishing Hugo blog posts to LinkedIn."
authors = [{ name = "Steve Bartimote" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "python-frontmatter>=1.1",
    "requests>=2.32",
    "keyring>=25.0",
]

[project.scripts]
linkedin-publisher = "publisher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/publisher"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
